src/test/resources/public/input/typechecking/fail/incompatible_return/fail08.jova
class Helper {
    private int a;
}

class A {

  private int get3(){
    return 3;
  }

  public Helper func() {
    int foo;
    Helper helper;
    int a;

    foo = 3;

    a = 4;

    return ((foo > 4) ? a : helper.a) + a * 15 * (16 - 23) - get3();

  }
}
